--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <linl rel="stylesheet" type="text/css" href="style.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <h1 class="main--header">BlackJack</h1>
+  <p>Want to play a round?</p>
+  <p>Cards:</p>
+  <p>Sum:</p>
+  <button class="start__button">start</button>
+  <script src="index.js"></script>
 </body>
 </html>
