--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <linl rel="stylesheet" type="text/css" href="style.css">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <title>Document</title>
 </head>
 <body>
   <h1 class="main--header">BlackJack</h1>
-  <p>Want to play a round?</p>
+  <p id="title_message">Want to play a round?</p>
   <p>Cards:</p>
   <p>Sum:</p>
-  <button class="start__button">start</button>
+  <button class="start__button btn btn-primary" onclick="startGame();">start</button>
   <script src="index.js"></script>
 </body>
 </html>
