displaying the sum to the user so the user can jknow the total

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1 class="main--header">BlackJack</h1>
   <p id="title_message">Want to play a round?</p>
   <p>Cards:</p>
-  <p>Sum:</p>
+  <p id="sum_el">Sum:</p>
   <button class="start__button btn btn-primary" onclick="startGame();">start</button>
   <script src="index.js"></script>
 </body>
