--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1 class="main--header">BlackJack</h1>
   <p id="title_message">Want to play a round?</p>
-  <p>Cards:</p>
+  <p id="card-el">Cards:</p>
   <p id="sum_el">Sum:</p>
   <button class="start__button btn btn-primary" onclick="startGame();">start</button>
   <script src="index.js"></script>
