adding a functionality to draw a new card and add it to the existing cards

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <p id="title_message">Want to play a round?</p>
   <p id="card-el">Cards:</p>
   <p id="sum_el">Sum:</p>
-  <button class="start__button btn btn-primary" onclick="startGame();">start</button>
+  <button class="start__button btn btn-primary" onclick="startGame();">start game</button>
+  <button class="new__button btn btn-primary" onclick="newCard();">new card</button>
+
   <script src="index.js"></script>
 </body>
 </html>
