creating a object fir the player name and the chips the player has

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <p id="sum_el">Sum:</p>
   <button class="start__button btn btn-primary" onclick="startGame();">start game</button>
   <button class="new__button btn btn-primary" onclick="newCard();">new card</button>
-
+  <p id="player-el"></p>
   <script src="index.js"></script>
 </body>
 </html>
